<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EE0A0A0A"
    tools:context=".AddCustomer">

    <EditText
        android:id="@+id/cstAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:backgroundTint="#27DA9B"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPersonName"
        android:labelFor="@+id/cstAddress"
        android:textColor="#27DA9B"
        android:textColorHint="#27DA9B"
        android:textCursorDrawable="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/cstVehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:backgroundTint="#AEFCFBFA"
        android:text="@string/SaveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicleC"
        android:textColor="#27DA9B"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cstVehicle"
        app:layout_constraintEnd_toStartOf="@+id/cstVehicle" />

    <EditText
        android:id="@+id/cstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#27DA9B"
        android:ems="10"
        android:hint="@string/cstName"
        android:inputType="textPersonName"
        android:labelFor="@+id/cstName"
        android:textColor="#27DA9B"
        android:textColorHint="#27DA9B"
        app:layout_constraintBottom_toTopOf="@+id/cstAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_follow_upC"
        android:textColor="#27DA9B"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/followFreq"
        app:layout_constraintEnd_toStartOf="@+id/followFreq" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameC"
        android:textColor="#F838CCCC"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cstName"
        app:layout_constraintEnd_toStartOf="@+id/cstName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addressC"
        android:textColor="#F838CCCC"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cstAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cstVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:autofillHints=""
        android:backgroundTint="#F838CCCC"
        android:ems="10"
        android:hint="@string/VehicleType"
        android:inputType="textPersonName"
        android:labelFor="@+id/cstVehicle"
        android:textColor="#F838CCCC"
        android:textColorHint="#F838CCCC"
        app:layout_constraintBottom_toTopOf="@+id/followFreq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/followFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:backgroundTint="#F838CCCC"
        android:ems="10"
        android:hint="@string/FollowFreq"
        android:inputType="textPersonName"
        android:labelFor="@+id/followFreq"
        android:textColor="#F838CCCC"
        android:textColorHint="#F838CCCC"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor"  />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="282dp" />

</androidx.constraintlayout.widget.ConstraintLayout>